isaac_ros-dev/src/data_logger_py/log/build_2024-11-25_20-46-20/data_logger_py/stderr.log
  File "/home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py/data_logger_py_node.py", line 30
    file_count++ 
                 ^
SyntaxError: invalid syntax

